<resources>
    <string name="app_name">Goal</string>
    <string name="finish_exercise_title">Bench press</string>
    <string name="finish_exercise_tempo">2—1—2</string>
    <string name="finish_exercise_weight_unit">kg</string>
    <string name="finish_exercise_weight_hint">20</string>
    <string name="finish_exercise_add_set_button">+</string>
    <string name="finish_exercise_remove_set_button">-</string>
    <string name="finish_exercise_comments">Comments</string>
    <string name="finish_exercise_sets_title">Sets</string>
</resources>
